--- a/WebApplication1/Views/Videogames/Index.cshtml
+++ b/WebApplication1/Views/Videogames/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.Videogame>
+﻿@model IEnumerable<WebApplication1.Models.MappedModel.VideogameDTO>
 
 @{
     ViewData["Title"] = "Index";
@@ -15,9 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+           @* <th>
                 @Html.DisplayNameFor(model => model.Developer)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
@@ -30,9 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ReleaseDate)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Genre)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -42,9 +42,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
+           @* <td>
                 @Html.DisplayFor(modelItem => item.Developer)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
@@ -57,13 +57,13 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ReleaseDate)
             </td>
-            <td>
+          @*  <td>
                 @Html.DisplayFor(modelItem => item.Genre.GenreName)
-            </td>
+            </td>*@
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="">Edit</a> |
+                <a asp-action="Details" asp-route-id="">Details</a> |
+                <a asp-action="Delete" asp-route-id="">Delete</a>
             </td>
         </tr>
 }
