--- a/WebApplication1/Views/Videogames/Create.cshtml
+++ b/WebApplication1/Views/Videogames/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Videogame
+﻿@model WebApplication1.Models.MappedModel.VideogameDTO
 
 @{
     ViewData["Title"] = "Create";
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="GenreId" class="control-label"></label>
-                <select asp-for="GenreId" class ="form-control" asp-items="ViewBag.GenreId"></select>
+                <select asp-for="GenreId" class="form-control" asp-items="ViewBag.Genres"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Developer" class="control-label"></label>
