--- a/WebApplication1/Views/Videogames/Create.cshtml
+++ b/WebApplication1/Views/Videogames/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.MappedModel.VideogameDTO
+﻿@model Entities.Models.DTO.VideogameDTO
 
 @{
     ViewData["Title"] = "Create";
