--- a/WebApplication1/Views/Videogames/Index.cshtml
+++ b/WebApplication1/Views/Videogames/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.MappedModel.VideogameDTO>
+﻿@model IEnumerable<Entities.Models.DTO.VideogameDTO>
 
 @{
     ViewData["Title"] = "Index";
